# Torque2024_HAWC2_simulations

./: .gitignore  pyproject.toml
DTU_10_MW_Reference_Wind_Turbine_v_9-1/: run.sh
DTU_10_MW_Reference_Wind_Turbine_v_9-1/control/: contents.txt
torque2024_hawc2_simulations/: DTU_10MW_RWT_template.htc.j2  delete_complete_htc.py  evaluate_aggregate.py  generate_htc.py  plot_something.py  plot_timeseries.py
